welcome.lessons.welcome.methods.args.MethodsArgs.scala.code
def move(nbpas:Int, versLAvant:Boolean) {
	if versLAvant==true {
		for (nb <- 0 to nbpas) {
			avance
		}
	} else {
		for (nb <- 0 to nbpas) {
			recule
		}
	}
}
